# sonnette

./: .gitignore  Cargo.toml
.github/workflows/: deploy.yml
apps/client/: Cargo.toml
apps/client/src/: audio.rs  input.rs  main.rs  sync.rs
apps/client/src/network/: handlers.rs  mod.rs
apps/server/: Cargo.toml
apps/server/src/: handler.rs  main.rs  state.rs  sync.rs
apps/server/src/commands/: mod.rs  ring_bell.rs  sync.rs
libs/common/src/: lib.rs
