[package]
name = "server"
version = "0.1.0"
edition = "2021"

[dependencies]
common = { path = "../../libs/common" }
tokio = { version = "1.0", features = ["full"] }
axum = { version = "0.8", features = ["ws"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
futures = "0.3"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tower-http = { version = "0.6", features = ["trace", "fs"] }
sha2 = "0.10"
hex = "0.4"
base64 = "0.22"
rand = "0.8"
